--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.css
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.css
@@ -14,6 +14,28 @@
   font-weight: 500;
 }
 
+button { 
+  margin-bottom: .8rem;
+}
+
 .table {
   width: 100%;
+}
+
+.livros {
+  margin-left: .3rem;
+  color: rgb(47, 78, 180);
+}
+
+.edit {
+  color: rgb(231, 228, 36);
+}
+
+.delete {
+  color: rgb(218, 49, 49);
+  margin-left: .5rem;
+}
+
+.mat-header {
+  width: 5rem;
 }
