--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -2,6 +2,8 @@
   <div class="title">
     <h1>Categoria</h1>
   </div>
+
+  <button class="mat-elevation-z8" mat-flat-button color="primary">Nova Categoria</button>
   <div class="mat-elevation-z8 content-table">
     <table class="table" mat-table [dataSource]="categorias">
 
@@ -12,20 +14,36 @@
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
+        <th mat-header-cell *matHeaderCellDef> NOME </th>
         <td mat-cell *matCellDef="let row"> {{ row.name }} </td>
       </ng-container>
 
       <!-- Weight Column -->
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Descrição </th>
+        <th mat-header-cell *matHeaderCellDef> DESCRIÇÃO </th>
         <td mat-cell *matCellDef="let row"> {{ row.description }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="books">
+        <th mat-header-cell *matHeaderCellDef> LIVROS </th>
+        <td mat-cell *matCellDef="let row">
+          <a class="livros" href="">
+            <i class="material-icons">book</i>
+          </a>
+        </td>
       </ng-container>
 
       <!-- Symbol Column -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Ações </th>
-        <td mat-cell *matCellDef="let row"> </td>
+        <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES </th>
+        <td mat-cell *matCellDef="let row">
+          <a class="edit" href="#">
+            <i class="material-icons">edit</i>
+          </a>
+          <a class="delete" href="#">
+            <i class="material-icons">delete</i>
+          </a>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
