--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,7 +3,9 @@
     <h1>Categoria</h1>
   </div>
 
-  <button class="mat-elevation-z8" mat-flat-button color="primary">Nova Categoria</button>
+  <button class="mat-elevation-z8" (click)="navegarParaCategoriaCreate()" mat-flat-button color="primary">Nova
+    Categoria</button>
+
   <div class="mat-elevation-z8 content-table">
     <table class="table" mat-table [dataSource]="categorias">
 
