--- a/src/app/components/views/categoria/categoria-create/categoria-create.component.html
+++ b/src/app/components/views/categoria/categoria-create/categoria-create.component.html
@@ -13,6 +13,6 @@
 
   <div class="buttons">
     <button (click)="create()" class="mat-elevation-z8" mat-flat-button color="primary">Criar</button>
-    <button class="mat-elevation-z8" mat-flat-button color="warn">Cancelar</button>
+    <button (click)="cancel()" class="mat-elevation-z8" mat-flat-button color="warn">Cancelar</button>
   </div>
 </form>
