--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,13 +1,12 @@
 <div class="content">
   <div class="title">
-    <h1>Categoria</h1>
+    <h1>Livros</h1>
   </div>
 
-  <button class="mat-elevation-z8" (click)="navegarParaCategoriaCreate()" mat-flat-button color="primary">Nova
-    Categoria</button>
+  <button class="mat-elevation-z8" mat-flat-button color="primary">Novo Livro</button>
 
   <div class="mat-elevation-z8 content-table">
-    <table class="table" mat-table [dataSource]="categorias">
+    <table class="table" mat-table [dataSource]="livros">
 
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -15,22 +14,16 @@
       </ng-container>
 
       <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> NOME </th>
-        <td mat-cell *matCellDef="let row"> {{ row.name }} </td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> DESCRIÇÃO </th>
-        <td mat-cell *matCellDef="let row"> {{ row.description }} </td>
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> TITULO </th>
+        <td mat-cell *matCellDef="let row"> {{ row.title }} </td>
       </ng-container>
 
       <ng-container matColumnDef="books">
-        <th mat-header-cell *matHeaderCellDef> LIVROS </th>
+        <th mat-header-cell *matHeaderCellDef> LER LIVRO </th>
         <td mat-cell *matCellDef="let row">
-          <a class="livros" routerLink="{{ row.id }}/livros">
-            <i class="material-icons">book</i>
+          <a class="livros">
+            <i class="material-icons">visibility</i>
           </a>
         </td>
       </ng-container>
@@ -39,10 +32,10 @@
       <ng-container matColumnDef="actions">
         <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES </th>
         <td mat-cell *matCellDef="let row">
-          <a class="edit" routerLink="update/{{ row.id }}">
+          <a class="edit" href="#">
             <i class="material-icons">edit</i>
           </a>
-          <a class="delete" routerLink="delete/{{ row.id }}">
+          <a class="delete" href="#">
             <i class="material-icons">delete</i>
           </a>
         </td>
