--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -22,7 +22,7 @@
       <ng-container matColumnDef="books">
         <th mat-header-cell *matHeaderCellDef> LER LIVRO </th>
         <td mat-cell *matCellDef="let row">
-          <a class="livros">
+          <a class="livros" routerLink="{{ row.id }}/read">
             <i class="material-icons">visibility</i>
           </a>
         </td>
